fixed play-pause button overlapping stuff

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@
 }
 #playpause img {
     width: 100%;
-    height: 100%;
+    height: 21px;
     filter: invert(1);
 }
 #progress {
@@ -76,11 +76,12 @@
     width: 0;
     border-right: 5px double white;
     background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgb(255, 192, 203, 0.3); */
     cursor: pointer;
 }
 #progress-container {
     width: 100%; height: 100%; 
-    background-color: rgb(255, 192, 203, 0.3); 
+    background-color: rgb(255, 192, 203, 0.3); /* or not */
     position: relative;
 }
 
@@ -118,10 +119,21 @@ a {
     left: 0; 
 }
 
+main {
+    max-width: 400px;
+    margin: 0px 20px;
+}
+
+main img {
+    width: 100%;
+    height: auto;
+    border: 2px solid white;
+}
+
 h1 {
     font-family: 'Playfair', serif;
     font-size: 25px;
-    margin: 20px;
+    margin: 20px 0px;
     text-align: center;
 }
 
